wazuh/indexer_stack/wazuh-dashboard/dashboard-svc.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Dashboard service

# apiVersion: v1
# kind: Service
# metadata:
#   name: dashboard
#   namespace: wazuh
#   labels:
#     app: wazuh-dashboard
#     # dns: route53
#   annotations:
#     # domainName: 'changeme'
#     # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 'changeme'
#     service.beta.kubernetes.io/aws-load-balancer-name: external-lb-dashboard
#     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443'
#     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
#     service.beta.kubernetes.io/aws-load-balancer-internal: "false"
# spec:
#   type: LoadBalancer
#   selector:
#     app: wazuh-dashboard
#   ports:
#     - name: dashboard
#       port: 443
#       targetPort: 5601


apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 5601    
      protocol: TCP
      targetPort: 5601
  selector:
    app: wazuh-dashboard
